--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for SQL-Abstract-FromQuery
 
 
+0.10  06.04.2015
+  - INCOMPATIBLE CHANGE:
+    removed support for multicolumns (moved to SQL-Abstract-More)
+
 0.09  24.03.2015
   - tests in 0.08 failed in perl >= 5.18 because of hash key orders
 
